# rust-with-llms

./: .gitignore  Cargo.toml  README.md
aoc/: Cargo.toml
aoc/src/: day1.rs  main.rs
async/: Cargo.toml
async/src/: main.rs
docs/: interactions.md
py/: Cargo.toml  pyproject.toml
py/src/: lib.rs
src/aoc/: day1.rs  day2.rs  day3.rs  day4.rs  main.rs
