[package]
name = "rust-with-llms"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.11"
regex = "1.10.2"
axum = "0.7.4"
axum-macros = "0.4.1"
tokio = { version = "1.36.0", features = ["full"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

[[bin]]
name = "aoc"
path = "src/aoc/main.rs"

[[bin]]
name = "async"
path = "src/async/main.rs"
