[package]
name = "async"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
axum-macros = "0.4.1"
tokio = { version = "1.36.0", features = ["full"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
